# OCI-Sniper-rs

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.minimal.toml  config.webhook.toml
locales/: en.json  zh-CN.json  zh-TW.json
src/: app.rs  bot.rs  cli.rs  config.rs  i18n.rs  lib.rs  lock.rs  logging.rs  main.rs  oci.rs
