[package]
name = "oci-sniper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
once_cell = "1.21"
rsa = { version = "0.9", features = ["pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["oid"] }
signature = "2.2"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
toml = "0.9"

[dev-dependencies]
rand = "0.8"
tempfile = "3.15"
