[package]
name = "oci-sniper-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0"
fs2 = "0.4"
once_cell = "1.21"
rsa = { version = "0.9", features = ["pem"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", features = ["oid"] }
signature = "2.2"
teloxide = { version = "0.13", default-features = false, features = ["ctrlc_handler", "rustls", "webhooks-axum"] }
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
toml = "0.9"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[dev-dependencies]
rand = "0.8"
tempfile = "3.27"
